ugoiras: fix layout shift during page load.
Fix it so that the layout doesn't shift when the page first loads. Also fix the player not having a
background during the initial load.

--- a/app/components/ugoira_component/ugoira_component.scss
+++ b/app/components/ugoira_component/ugoira_component.scss
@@ -10,6 +10,10 @@
   width: 100%;
 }
 
+.ugoira-container {
+  background-color: var(--ugoira-background-color);
+}
+
 .ugoira-controls {
   &, .tippy-box {
     background-color: #1f202cc0; // fallback
