--- a/app/javascript/src/styles/base/040_colors.scss
+++ b/app/javascript/src/styles/base/040_colors.scss
@@ -278,6 +278,7 @@ html, body[data-current-user-theme="light"] {
 
   --remove-favorite-button: var(--red-4);
 
+  --ugoira-background-color: var(--black);
   --ugoira-controls-icon-color: var(--white);
   --ugoira-controls-icon-hover-color: var(--azure-3);
   --ugoira-controls-background-color: var(--grey-9);
@@ -514,6 +515,7 @@ html, body[data-current-user-theme="light"] {
 
   --remove-favorite-button: var(--red-4);
 
+  --ugoira-background-color: var(--black);
   --ugoira-controls-icon-color: var(--white);
   --ugoira-controls-icon-hover-color: var(--azure-4);
   --ugoira-controls-background-color: var(--grey-9);
